@@ -27,3 +27,4 @@
 	- preparing to add ExtendToAvalonEverywhere command
 2009.09.30
 	- ExtendToAvalonEverywhere now builds javascript version and actionscript version
+	- ExtendToAvalonEverywhere also prepares a projector exe file
